// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackButton Visual Tests renders correctly in different positions: position-bottom-left 1`] = `
<button
  aria-label="Feedback"
  style="position: fixed; bottom: 20px; left: 20px; background-color: rgb(0, 123, 255); color: white; border-radius: 50%; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 1000; display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; font-size: 16px;"
  title="Feedback"
>
  💬
</button>
`;

exports[`FeedbackButton Visual Tests renders correctly in different positions: position-bottom-right 1`] = `
<button
  aria-label="Feedback"
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgb(0, 123, 255); color: white; border-radius: 50%; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 1000; display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; font-size: 16px;"
  title="Feedback"
>
  💬
</button>
`;

exports[`FeedbackButton Visual Tests renders correctly in different positions: position-top-left 1`] = `
<button
  aria-label="Feedback"
  style="position: fixed; top: 20px; left: 20px; background-color: rgb(0, 123, 255); color: white; border-radius: 50%; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 1000; display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; font-size: 16px;"
  title="Feedback"
>
  💬
</button>
`;

exports[`FeedbackButton Visual Tests renders correctly in different positions: position-top-right 1`] = `
<button
  aria-label="Feedback"
  style="position: fixed; top: 20px; right: 20px; background-color: rgb(0, 123, 255); color: white; border-radius: 50%; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 1000; display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; font-size: 16px;"
  title="Feedback"
>
  💬
</button>
`;

exports[`FeedbackButton Visual Tests renders correctly in light theme 1`] = `
<button
  aria-label="Feedback"
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgb(0, 123, 255); color: white; border-radius: 50%; cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 1000; display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; font-size: 16px;"
  title="Feedback"
>
  💬
</button>
`;
